--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,9 @@
-[package]
-name = "aws-lambda-rust"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"
 
-[dependencies]
-lambda_http = "0.*"
-lambda_runtime = "0.*"
-serde = "1"
-tokio = { version = "1", features = ["macros"] }
+members = [
+  "./packages/server",
+]
 
 [profile.release]
 opt-level = 3
