--- a/packages/lambda/Cargo.toml
+++ b/packages/lambda/Cargo.toml
@@ -7,7 +7,4 @@ edition = "2021"
 lambda_http = "0.*"
 lambda_runtime = "0.*"
 serde = "1"
-tokio = { version = "1", features = ["full"] }
-normalize-path = "*"
-pathdiff = "*"
-mime_guess = "*"
+tokio = { version = "1", features = ["macros"] }
