--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,9 +22,12 @@ jobs:
       PROJECT_NAME: aws-lambda-cognito-rust
     steps:
       - uses: actions/checkout@v4
-      - name: "Setup"
-        run: bash .github/scripts/prelude.bash
-        
+      - run: bash .github/scripts/prelude/aws.bash
+      - run: bash .github/scripts/prelude/just.bash
+      - run: bash .github/scripts/prelude/nodejs.bash
+      - run: bash .github/scripts/prelude/rust.bash
+      - run: bash .github/scripts/prelude/terraform.bash
+      
       - name: "Build"
         run: |
           set -e
