--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,17 +22,21 @@ jobs:
       PROJECT_NAME: aws-lambda-cognito-rust
     steps:
       - uses: actions/checkout@v4
+      - run: bash .github/scripts/prelude/ubuntu.bash
       - run: bash .github/scripts/prelude/aws.bash
       - run: bash .github/scripts/prelude/just.bash
       - run: bash .github/scripts/prelude/nodejs.bash
       - run: bash .github/scripts/prelude/rust.bash
       - run: bash .github/scripts/prelude/terraform.bash
-      
+
       - name: "Build"
         run: |
           set -e
           npm install
           just build-publish
+          ls -l dist
+          ls -l dist/client
+          ls -l dist/lambda
 
       - name: "Deploy"
         run: bash .github/scripts/deploy.bash
