--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: bash .github/scripts/ubuntu.bash
-      # - run: bash .github/scripts/aws.bash
+      - run: bash .github/scripts/aws.bash
       - run: bash .github/scripts/just.bash
       - run: bash .github/scripts/nodejs.bash
       - run: bash .github/scripts/rust.bash
@@ -28,10 +28,16 @@ jobs:
           ls -l dist
           ls -l dist/client
           ls -l dist/lambda
-      - run: just deploy
-        env:
+      - env:
           PROJECT_NAME: aws-lambda-cognito-rust
           TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ap-southeast-2
+        run: |
+        set -e
+        aws --profile default configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+        aws --profile default configure set aws_secret_access_key "${{ secrets.AWS_ACCESS_KEY_ID }}"
+        aws configure set region "ap-southeast-2"
+        just deploy
+        
